--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   http: ^1.1.0
   google_fonts: ^5.1.0
   carousel_slider: ^4.2.1
-  youtube_player_flutter: ^8.1.2
+  url_launcher: ^6.1.12
+
 
 dev_dependencies:
   flutter_test:
